selection values checked

--- a/directory/events.html
+++ b/directory/events.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js" defer type="module"></script>
-    <title>Document</title>
-</head>
+    <head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="\app.js" defer type="module"></script>
+		<link rel="stylesheet" href="/styles/global.css" />
+		<title>Document</title>
+	</head>
 <body>
+    <section id="performances">
+
+    </section>
     
 </body>
 </html>
