--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js" defer type="module"></script>
-    <link rel="stylesheet" href="/styles/global.css" />
-    <title>Document</title>
-</head>
-<body>
-    <div class="body-content">
-        <header>
-            <nav>
-                <div class="nav-content">
-                    <div class="logo">
-
-                    </div>
-                    <div class="nav-menu">
-                        
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <main>
-            <section id="hero">
-                <h1>Tus eventos</h1>
-                <div class="user-events">
-                    <div class="event">
-                        <div class="event-img">
-                            <img src="" alt="">
-                        </div>
-                        <h2>Festival de Teatro UPM</h2>
-                        <div id="performances">
-
-                        </div>
-                    </div>
-                    <input type="datetime-local" id="fecha">
-                </div>
-            </section>
-        </main>
-        <footer>
-
-        </footer>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="app.js" defer type="module"></script>
+		<link rel="stylesheet" href="/styles/global.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="body-content">
+			<header>
+				<nav>
+					<div class="nav-content">
+						<div class="logo"></div>
+						<div class="nav-menu"></div>
+					</div>
+				</nav>
+			</header>
+			<main>
+				<section id="hero">
+					<h1>Tus eventos</h1>
+					<div class="user-events">
+						<div class="event" role="button">
+							<a href="\directory\events.html">
+								<div class="event-img">
+									<img src="" alt="" />
+								</div>
+								<h2>Festival de Teatro UPM</h2>
+							</a>
+							<div id="performances"></div>
+                            <div class="calendar">
+                                <button type="button">Generar calendario</button>
+                            </div>
+						</div>
+						<input type="datetime-local" id="fecha" />
+					</div>
+				</section>
+			</main>
+			<footer></footer>
+		</div>
+	</body>
 </html>
