improved generate button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 									</button>
 								</div>
 								<div id="calendar-entries"></div>
+                                <div id="my-calendar"></div>
 							</div>
 						</div>
 						<input type="datetime-local" id="fecha" />
