--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 								<h2>Festival de Teatro UPM</h2>
 							</a>
 							<div id="performances"></div>
-							<div id="calendar">
+							<div id="generator">
+								<div id="calendar"></div>
 								<div class="buttons">
 									<button type="button" id="btnGenerate">
 										Generar calendario
@@ -44,7 +45,6 @@
 									</button>
 								</div>
 								<div id="calendar-entries"></div>
-                                <div id="my-calendar"></div>
 							</div>
 						</div>
 						<input type="datetime-local" id="fecha" />
