calendar logic adapted with clickOnDate

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 					</div>
 				</div>
 				<div id="calendar"></div>
+				<div id="obras-del-dia" class="selector-box"></div>
 			</main>
-			<footer></footer>
+			<footer id="footer"></footer>
 		</div>
 	</body>
 </html>
