radio buttons logic multiple day checking

--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
 					</div>
 				</div>
 				<div id="calendar"></div>
-				<div id="obras-del-dia" class="selector-box"></div>
+				<div id="date-plays" class="selector-box"></div>
+				<!-- <div id="generator">
+					<div class="buttons">
+						<button type="button" id="btnGenerate">Generar calendario</button>
+						<button type="button" id="btnReset">Limpiar selecciones</button>
+					</div>
+					<div id="calendar-entries"></div>
+				</div> -->
 			</main>
 			<footer id="footer"></footer>
 		</div>
