--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 				</div>
 				<div id="calendar"></div>
 				<div id="date-plays" class="selector-box"></div>
-				<!-- <div id="generator">
+				<div id="generator">
 					<div class="buttons">
 						<button type="button" id="btnGenerate">Generar calendario</button>
 						<button type="button" id="btnReset">Limpiar selecciones</button>
 					</div>
 					<div id="calendar-entries"></div>
-				</div> -->
+				</div>
 			</main>
 			<footer id="footer"></footer>
 		</div>
