deleted calendar from main page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							</a>
 						</div>
 						<div class="event" role="button">
-							<a href="/directory/user-events.html">
+							<a href="*">
 								<div class="event-img">
 									<img
 										src="/media/iconos/festival.png"
@@ -64,15 +64,6 @@
 							</a>
 						</div>
 					</div>
-				</div>
-				<div id="calendar"></div>
-				<div id="date-plays" class="selector-box"></div>
-				<div id="generator">
-					<div class="buttons">
-						<button type="button" id="btnGenerate">Generar calendario</button>
-						<button type="button" id="btnReset">Limpiar selecciones</button>
-					</div>
-					<div id="calendar-entries"></div>
 				</div>
 			</main>
 			<footer id="footer"></footer>
