--- a/directory/user-events.html
+++ b/directory/user-events.html
@@ -41,11 +41,11 @@
 				</nav>
 			</header>
 			<main>
-				<div class="page-container">
+				<div class="page-container event-page">
 					<h1>Festival teatro UPM</h1>
 
 					<div id="calendar"></div>
-					<div id="date-plays" class="selector-box"></div>
+					<div id="date-plays"></div>
 					<div id="generator">
 						<div class="buttons">
 							<button type="button" id="btnGenerate">Generar calendario</button>
